--- a/WebSharper.BackgroundFetch.Sample/wwwroot/index.html
+++ b/WebSharper.BackgroundFetch.Sample/wwwroot/index.html
@@ -9,7 +9,7 @@
         /* Don't show the not-yet-loaded templates */
         [ws-template], [ws-children-template] { display: none; }
     </style>
-    <script type="text/javascript" src="Content/WebSharper.BackgroundFetch.Sample.head.js"></script>
+    <script type="module" src="Content/WebSharper.BackgroundFetch.Sample.head.js"></script>
 </head>
 <body>
     <h1>Background Fetch API Demo</h1>
@@ -17,6 +17,6 @@
         <button ws-onclick="startBackgroundFetch">Download File</button>
         <p id="status">${Status}</p>
     </div>
-    <script type="text/javascript" src="Content/WebSharper.BackgroundFetch.Sample.min.js"></script>
+    <script type="module" src="Content/WebSharper.BackgroundFetch.Sample.min.js"></script>
 </body>
 </html>
